# radeon_gpu_detective

./: .gitattributes  .gitignore  .readthedocs.yaml  Buildinfo.properties.in  CMakeLists.txt  LICENSE  README.md  RGD_NOTICES.txt  RGD_RELEASE_NOTES.txt
documentation/: Makefile  make.bat
documentation/source/: conf.py  help_manual.rst  index.rst  quickstart.rst  requirements.txt
samples/: sample_crash_dump.rgd
source/radeon_gpu_detective_backend/: CMakeLists.txt  rgd_amd_gpu_dis_loader.cpp  rgd_amd_gpu_dis_loader.h  rgd_asic_info.cpp  rgd_asic_info.h  rgd_code_object_comgr_handle.h  rgd_code_object_database.cpp  rgd_code_object_database.h  rgd_crash_info_registers_parser.h  rgd_crash_info_registers_parser_context.cpp  rgd_crash_info_registers_parser_context.h  rgd_crash_info_registers_parser_rdna2.cpp  rgd_crash_info_registers_parser_rdna2.h  rgd_crash_info_registers_parser_rdna3.cpp  rgd_crash_info_registers_parser_rdna3.h  rgd_crash_info_registers_parser_rdna4.cpp  rgd_crash_info_registers_parser_rdna4.h  rgd_crash_info_registers_parser_strix1.cpp  rgd_crash_info_registers_parser_strix1.h  rgd_data_types.h  rgd_dxbc_parser.cpp  rgd_dxbc_parser.h  rgd_enhanced_crash_info_serializer.cpp  rgd_enhanced_crash_info_serializer.h  rgd_exec_marker_tree_serializer.cpp  rgd_exec_marker_tree_serializer.h  rgd_hash.h  rgd_marker_data_serializer.cpp  rgd_marker_data_serializer.h  rgd_parsing_utils.cpp  rgd_parsing_utils.h  rgd_perf.h  rgd_process_utils.cpp  rgd_process_utils.h  rgd_register_parsing_utils.cpp  rgd_register_parsing_utils.h  rgd_resource_info_serializer.cpp  rgd_resource_info_serializer.h  rgd_serializer.cpp  rgd_serializer.h  (+15 more)
source/radeon_gpu_detective_cli/: CMakeLists.txt  main.cpp  rgd_data_types.h  rgd_exec_marker_tree_serializer.cpp  rgd_exec_marker_tree_serializer.h  rgd_marker_data_serializer.cpp  rgd_marker_data_serializer.h  rgd_parsing_utils.cpp  rgd_parsing_utils.h  rgd_resource_info_serializer.cpp  rgd_resource_info_serializer.h  rgd_serializer.cpp  rgd_serializer.h  rgd_serializer_json.cpp  rgd_serializer_json.h  rgd_utils.cpp  rgd_utils.h
source/radeon_gpu_detective_cli/windows/: resource.h  rgd.rc
test/: RGD_TEST_README.md
test/scripts/: TestRunner.py
test/scripts/input_description_files/: RgdAllTests.json  RgdDriverSanity.json
test/source/rgd_test/: CMakeLists.txt  main.cpp  test_rgd_file.cpp  test_rgd_file.h
